--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,38 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In - Gitam Student Portal</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign In - Gitam Student Portal</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 20px;
+      background: linear-gradient(120deg, #6C63FF 0%, #a46bff 100%);
+      background-image: url('https://i.postimg.cc/6QRPd6QY/1000008385-Picsart-Ai-Image-Enhancer.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 1100px;
+      background: #fff;
+      border-radius: 30px;
+      display: flex;
+      overflow: hidden;
+      box-shadow: 0 4px 32px rgba(44, 24, 128, 0.15);
+      min-height: 540px;
+    }
+
+    /* Left Side (Login Form) */
+    .left {
+      flex: 1;
+      padding: 48px 40px 48px 48px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      background: #fff;
+    }
+
+    .logo {
+      font-weight: bold;
+      font-size: 20px;
+      margin-bottom: 28px;
+      color: #6C63FF;
+      letter-spacing: 0.5px;
+    }
+
+    .left h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+      font-weight: 700;
+      color: #181818;
+      letter-spacing: 0.5px;
+    }
+
+    .left p {
+      margin-bottom: 28px;
+      color: #888;
+      font-size: 16px;
+    }
+
+    .form-group {
+      margin-bottom: 18px;
+      display: flex;
+      flex-direction: column;
+      text-align: left;
+    }
+
+    .form-group label {
+      font-size: 15px;
+      margin-bottom: 7px;
+      color: #333;
+      font-weight: 500;
+    }
+
+    .form-group input {
+      width: 100%;
+      padding: 13px 16px;
+      border: 1.5px solid #e0e0e0;
+      border-radius: 10px;
+      font-size: 15px;
+      background: #fafaff;
+      transition: border 0.2s;
+    }
+    .form-group input:focus {
+      border-color: #6C63FF;
+      outline: none;
+    }
+
+    .btn {
+      width: 100%;
+      padding: 13px;
+      background: #6C63FF;
+      border: none;
+      border-radius: 10px;
+      color: #fff;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s;
+      margin-top: 12px;
+      font-size: 18px;
+    }
+
+    .btn:hover {
+      background: #5848d4;
+    }
+
+    .signup {
+      margin-top: 18px;
+      text-align: center;
+      font-size: 15px;
+      color: #444;
+    }
+
+    .signup a {
+      color: #6C63FF;
+      text-decoration: none;
+      font-weight: 600;
+      margin-left: 4px;
+    }
+
+    .signup a:hover {
+      text-decoration: underline;
+    }
+
+    .message {
+      margin-top: 12px;
+      font-size: 14px;
+      color: red;
+      text-align: center;
+    }
+
+    /* Right Side */
+    .right {
+      flex: 1.1;
+      background: transparent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+      min-height: 100%;
+    }
+
+    .right img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      border-radius: 0 30px 30px 0;
+      max-height: 100%;
+      max-width: 100%;
+    }
+
+    /* Responsive */
+    @media (max-width: 1100px) {
+      .container {
+        max-width: 98vw;
+      }
+      .left {
+        padding: 36px 18px 36px 24px;
+      }
+    }
+
+    @media (max-width: 900px) {
+      .container {
+        flex-direction: column-reverse;
+        border-radius: 18px;
+        min-height: 0;
+      }
+
+      .left {
+        padding: 32px 16px;
+        border-radius: 0 0 18px 18px;
+        text-align: center;
+      }
+
+      .left h1 {
+        font-size: 26px;
+      }
+
+      .right {
+        padding: 0;
+        height: 260px;
+        border-radius: 18px 18px 0 0;
+      }
+
+      .right img {
+        border-radius: 18px 18px 0 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        max-width: 100vw;
+        min-height: 0;
+      }
+      .left h1 {
+        font-size: 20px;
+      }
+      .left p {
+        font-size: 13px;
+      }
+      .form-group input {
+        font-size: 13px;
+        padding: 10px;
+      }
+      .btn {
+        font-size: 15px;
+        padding: 10px;
+      }
+      .right {
+        height: 160px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="login-container animated">
-        <div class="left-side">
-            <img src="Screenshot 2025-08-05 183412.png" alt="Skeleton with Laptop">
-            <h2>Know about teachers</h2>
-            <p>Learn about your faculty. Get started now!</p>
+  <div class="container">
+    <!-- Left Side (Form) -->
+    <div class="left">
+      <div class="logo">Lecturers Reviews</div>
+      <h1>Sign In to your Account</h1>
+      <p>See what is going on with your lecturers</p>
+
+      <form id="loginForm">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="your@student.gitam.edu" required>
         </div>
-        <div class="right-side">
-            <div class="login-form-box">
-                <h2>Sign In to your Account</h2>
-                <p>See what is going on with your business</p>
-                <form id="loginForm">
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password" required>
-                    </div>
-                    <button type="submit">Login</button>
-                </form>
-                <p class="register-link">Not Registered Yet? <a href="signup.html" class="link">Create an account</a></p>
-                <p id="message" class="message"></p>
-            </div>
+
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder="********" required>
         </div>
+
+        <button type="submit" class="btn">Login</button>
+      </form>
+
+      <div class="signup">
+        Not Registered Yet? <a href="signup.html">Create an account</a>
+      </div>
+      <p id="message" class="message"></p>
     </div>
-    <script src="script.js"></script>
+
+    <!-- Right Side (Illustration) -->
+    <div class="right">
+      <img src="https://i.postimg.cc/1XbbZ87h/1000008382-Picsart-Ai-Image-Enhancer.jpg" alt="Skeleton with Laptop">
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
