--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -4,41 +4,468 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Gitam Student Portal</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  body {
+    background: linear-gradient(120deg, #6C63FF 0%, #a46bff 100%);
+    background-image: url('https://i.postimg.cc/6QRPd6QY/1000008385-Picsart-Ai-Image-Enhancer.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 100vh;
+    padding: 20px;
+  }
+
+  /* Header */
+  .header {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.9) 0%, rgba(248, 250, 255, 0.9) 100%);
+    backdrop-filter: blur(15px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 20px;
+    padding: 25px 35px;
+    margin-bottom: 40px;
+    box-shadow: 0 8px 32px rgba(44, 24, 128, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto 40px auto;
+  }
+
+  .logo {
+    font-weight: bold;
+    font-size: 28px;
+    background: linear-gradient(135deg, #6C63FF 0%, #8B7FFF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    letter-spacing: 0.5px;
+  }
+
+  .user-info {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+  }
+
+  .user-details {
+    text-align: right;
+  }
+
+  .user-name {
+    font-weight: 600;
+    color: #2d3748;
+    font-size: 18px;
+  }
+
+  .user-email {
+    font-size: 14px;
+    color: #4a5568;
+    margin-top: 2px;
+  }
+
+  .logout-btn {
+    background: linear-gradient(135deg, #dc3545 0%, #e74c3c 100%);
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    border-radius: 12px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: all 0.3s;
+    font-size: 14px;
+    box-shadow: 0 4px 15px rgba(220, 53, 69, 0.3);
+  }
+
+  .logout-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 20px rgba(220, 53, 69, 0.4);
+  }
+
+  /* Main Content */
+  .main-content {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  /* Welcome & Search Combined Section */
+  .main-section {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.85) 0%, rgba(248, 250, 255, 0.85) 100%);
+    backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    border-radius: 25px;
+    padding: 50px;
+    margin-bottom: 50px;
+    box-shadow: 0 10px 40px rgba(44, 24, 128, 0.1);
+    text-align: center;
+  }
+
+  .welcome-title {
+    font-size: 36px;
+    font-weight: 700;
+    background: linear-gradient(135deg, #2d3748 0%, #4a5568 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin-bottom: 15px;
+  }
+
+  .welcome-subtitle {
+    font-size: 18px;
+    color: #4a5568;
+    margin-bottom: 40px;
+  }
+
+  .search-container {
+    display: flex;
+    gap: 15px;
+    max-width: 500px;
+    margin: 0 auto 40px auto;
+  }
+
+  .search-input {
+    flex: 1;
+    padding: 18px 24px;
+    border: 1.5px solid rgba(108, 99, 255, 0.2);
+    border-radius: 15px;
+    font-size: 16px;
+    background: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+    transition: all 0.3s;
+    color: #2d3748;
+  }
+
+  .search-input:focus {
+    border-color: #6C63FF;
+    outline: none;
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 0 3px rgba(108, 99, 255, 0.1);
+  }
+
+  .search-input::placeholder {
+    color: #718096;
+  }
+
+  .search-btn {
+    padding: 18px 32px;
+    background: linear-gradient(135deg, #6C63FF 0%, #8B7FFF 100%);
+    color: white;
+    border: none;
+    border-radius: 15px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s;
+    font-size: 16px;
+    box-shadow: 0 4px 20px rgba(108, 99, 255, 0.3);
+  }
+
+  .search-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 8px 30px rgba(108, 99, 255, 0.4);
+  }
+
+  /* Dashboard Actions - Simplified */
+  .dashboard-actions {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .action-btn {
+    background: linear-gradient(135deg, #6C63FF 0%, #8B7FFF 100%);
+    color: white;
+    border: none;
+    padding: 18px 35px;
+    border-radius: 15px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s;
+    font-size: 16px;
+    box-shadow: 0 6px 25px rgba(108, 99, 255, 0.3);
+    min-width: 180px;
+  }
+
+  .action-btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 35px rgba(108, 99, 255, 0.4);
+  }
+
+  /* Latest Contributions Section */
+  .latest-contributions {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.85) 0%, rgba(248, 250, 255, 0.85) 100%);
+    backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    border-radius: 25px;
+    padding: 40px;
+    margin-bottom: 30px;
+    box-shadow: 0 10px 40px rgba(44, 24, 128, 0.1);
+  }
+
+  .latest-contributions h2 {
+    background: linear-gradient(135deg, #2d3748 0%, #4a5568 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin-bottom: 25px;
+    font-size: 28px;
+    text-align: center;
+  }
+
+  .contributions-container {
+    max-height: 400px;
+    overflow-y: auto;
+  }
+
+  .contribution-card {
+    background: linear-gradient(135deg, rgba(248, 250, 255, 0.8) 0%, rgba(237, 242, 255, 0.8) 100%);
+    backdrop-filter: blur(10px);
+    padding: 20px;
+    border-radius: 15px;
+    margin-bottom: 15px;
+    border-left: 5px solid #6C63FF;
+    box-shadow: 0 4px 20px rgba(108, 99, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  }
+
+  .contribution-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .faculty-name {
+    font-weight: 600;
+    color: #2d3748;
+    font-size: 16px;
+  }
+
+  .rating {
+    color: #ffc107;
+    font-size: 18px;
+  }
+
+  .contribution-text {
+    color: #4a5568;
+    line-height: 1.6;
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+
+  .contribution-meta {
+    font-size: 12px;
+    color: #718096;
+  }
+
+  .no-contributions {
+    text-align: center;
+    color: #718096;
+    font-style: italic;
+    padding: 40px 20px;
+  }
+
+  /* Search Results */
+  .search-results {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.85) 0%, rgba(248, 250, 255, 0.85) 100%);
+    backdrop-filter: blur(20px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    border-radius: 25px;
+    padding: 40px;
+    box-shadow: 0 10px 40px rgba(44, 24, 128, 0.1);
+    display: none;
+    margin-top: 30px;
+  }
+
+  .search-results h3 {
+    background: linear-gradient(135deg, #2d3748 0%, #4a5568 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin-bottom: 25px;
+    font-size: 28px;
+    text-align: center;
+  }
+
+  .review-card {
+    background: linear-gradient(135deg, rgba(248, 250, 255, 0.8) 0%, rgba(237, 242, 255, 0.8) 100%);
+    backdrop-filter: blur(10px);
+    padding: 25px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    border-left: 5px solid #6C63FF;
+    box-shadow: 0 4px 20px rgba(108, 99, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  }
+
+  .review-card .reviewer-name {
+    font-weight: 600;
+    color: #2d3748;
+    margin-bottom: 8px;
+    font-size: 16px;
+  }
+
+  .review-card .review-text {
+    color: #4a5568;
+    line-height: 1.7;
+    margin-bottom: 12px;
+    font-size: 15px;
+  }
+
+  .review-card .review-meta {
+    font-size: 13px;
+    color: #718096;
+  }
+
+  .message {
+    margin-top: 25px;
+    padding: 18px;
+    border-radius: 12px;
+    text-align: center;
+    font-weight: 600;
+    backdrop-filter: blur(10px);
+  }
+
+  .message.error {
+    background: linear-gradient(135deg, rgba(248, 215, 218, 0.9) 0%, rgba(245, 198, 203, 0.9) 100%);
+    color: #721c24;
+    border: 1px solid rgba(241, 174, 181, 0.5);
+  }
+
+  .message.success {
+    background: linear-gradient(135deg, rgba(212, 237, 218, 0.9) 0%, rgba(195, 230, 203, 0.9) 100%);
+    color: #155724;
+    border: 1px solid rgba(195, 230, 203, 0.5);
+  }
+
+  /* Responsive Design */
+  @media (max-width: 768px) {
+    .header {
+      flex-direction: column;
+      gap: 20px;
+      text-align: center;
+      padding: 20px 25px;
+    }
+
+    .user-info {
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .main-section, .latest-contributions {
+      padding: 35px 25px;
+    }
+
+    .welcome-title {
+      font-size: 28px;
+    }
+
+    .search-container {
+      flex-direction: column;
+      max-width: 100%;
+    }
+
+    .dashboard-actions {
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+
+    .action-btn {
+      width: 100%;
+      max-width: 280px;
+    }
+
+    .contribution-header {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 5px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    body {
+      padding: 15px;
+    }
+
+    .header {
+      padding: 20px;
+    }
+
+    .main-section,
+    .latest-contributions,
+    .search-results {
+      padding: 25px 20px;
+    }
+
+    .welcome-title {
+      font-size: 24px;
+    }
+
+    .welcome-subtitle {
+      font-size: 16px;
+    }
+  }
+</style>
 </head>
 <body>
-    <header class="app-header">
-        <h1 class="logo">Gitam Student Portal</h1>
-        <div class="header-buttons">
-            <span id="headerName"></span>
-            <span id="headerEmail"></span>
-            <button id="logoutButton" class="btn-secondary">Logout</button>
+    <!-- Header -->
+    <div class="header">
+        <div class="logo">Lecturers Reviews</div>
+        <div class="user-info">
+            <div class="user-details">
+                <div class="user-name" id="headerName">Loading...</div>
+                <div class="user-email" id="headerEmail">loading...</div>
+            </div>
+            <button id="logoutButton" class="logout-btn">Logout</button>
         </div>
-    </header>
+    </div>
 
-    <div class="container animated wide">
-        <div class="dashboard-content">
-            <h2 id="greetMessage"></h2>
-
-            <div class="search-bar-container">
-                <input type="text" id="teacherSearchInput" placeholder="Enter your teachers email or name">
-                <button id="teacherSearchButton">Search</button>
+    <!-- Main Content -->
+    <div class="main-content">
+        <!-- Main Section - Welcome + Search + Actions -->
+        <div class="main-section">
+            <h1 class="welcome-title" id="greetMessage">Welcome to Your Dashboard!</h1>
+            <p class="welcome-subtitle">Search for faculty reviews and manage your contributions</p>
+            
+            <!-- Search -->
+            <div class="search-container">
+                <input type="text" id="teacherSearchInput" class="search-input" placeholder="Search faculty by name or email...">
+                <button id="teacherSearchButton" class="search-btn">Search</button>
             </div>
 
-            <div class="dashboard-buttons">
-                <button id="yourContributionsButton" class="animated">Your Contributions</button>
-                <button id="addContributionsButton" class="animated">Do Contributions</button>
-                <button id="seeAllContributionsButton" class="animated">See All Contributions</button>
-            </div>
-
-            <p id="message" class="message"></p>
-
-            <div id="searchResults" style="display: none;" class="animated">
-                <div id="searchResultsContent"></div>
+            <!-- Actions -->
+            <div class="dashboard-actions">
+                <button id="yourContributionsButton" class="action-btn">📝 Your Reviews</button>
+                <button id="addContributionsButton" class="action-btn">➕ Add Review</button>
+                <button id="seeAllContributionsButton" class="action-btn">👥 Browse All</button>
             </div>
         </div>
+
+        <!-- Latest Contributions Section -->
+        <div id="latestContributions" class="latest-contributions">
+            <h2>📋 Latest Contributions</h2>
+            <div id="latestContributionsContent" class="contributions-container">
+                <div class="no-contributions">Loading latest contributions...</div>
+            </div>
+        </div>
+
+        <!-- Search Results -->
+        <div id="searchResults" class="search-results">
+            <div id="searchResultsContent"></div>
+        </div>
+
+        <!-- Message Display -->
+        <p id="message" class="message" style="display: none;"></p>
     </div>
 
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
