--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -233,13 +233,12 @@
   <div class="container">
     <!-- Left Side (Form) -->
     <div class="left">
-      <div class="logo">Lecturers Reviews</div>
       <h1>Create Your Account</h1>
       <p>Register to start reviewing your lecturers</p>
       <form id="signupForm">
         <div class="form-group">
           <label for="name">Your Name</label>
-          <input type="text" id="name" name="name" placeholder="John Doe" required>
+          <input type="text" id="name" name="name" placeholder="Ram" required>
         </div>
         <div class="form-group">
           <label for="email">Gitam Email</label>
